k3s/authelia.pre.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: sso
