k3s/postgres-pre.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: psql
