k3s/postgres.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: psql
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:alpine
          args: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf"]
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresql-conf
              mountPath: /etc/postgresql/
            - name: cert
              mountPath: /etc/cert
            - name: data
              mountPath: /var/lib/postgresql/data/
              readOnly: false
      volumes:
        - name: postgresql-conf
          configMap: 
            name: postgres-conf
            items:
              - key: "postgresql.conf"
                path: "postgresql.conf"
              - key: "pg_hba.conf"
                path: "pg_hba.conf"
        - name: cert
          secret:
            secretName: postgres-tls
            defaultMode: 416
        - name: data
          persistentVolumeClaim:
            claimName: postgres-volume-claim
