k3s/authelia.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia-deployment
  namespace: sso
  labels:
    app: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: authelia
          image: authelia/authelia:latest
          ports:
            - containerPort: 9091
          volumeMounts:
            - name: authelia-conf
              mountPath: /config
            - name: authelia-secrets
              mountPath: /secrets
            - name: authelia-tls
              mountPath: /etc/authelia/certs
            - name: oidc-tls
              mountPath: /etc/authelia/oidc
            - name: authelia-tls-ca
              mountPath: /config/cacerts
      volumes:
        - name: authelia-conf
          configMap:
            name: authelia-conf
        - name: authelia-secrets
          secret:
            secretName: authelia-secrets
        - name: authelia-tls
          secret:
            secretName: sso-tls
            items:
              - key: "tls.crt"
                path: "tls.crt"
              - key: "tls.key"
                path: "tls.key"
        - name: authelia-tls-ca
          secret:
            secretName: sso-tls
            items:
              - key: "ca.crt"
                path: "ca.crt"
        - name: oidc-tls
          secret:
            secretName: sso-auth

---

apiVersion: v1
kind: Service
metadata:
  name: authelia-service
  namespace: sso
  labels:
    app: authelia
spec:
  type: ClusterIP
  selector:
    app: authelia
  ports:
    - name: authelia
      port: 9091
      targetPort: 9091

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sso-ingress
  namespace: sso
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sso.cisb.local`)
      services:
        - kind: Service
          name: authelia-service
          namespace: sso
          port: 9091
  tls:
    secretName: sso-http
